# lardata

lardata/DetectorInfoServices/: DetectorClocksService.h  DetectorClocksServiceStandard.h  DetectorPropertiesService.h  DetectorPropertiesServiceStandard.h  LArPropertiesService.h  LArPropertiesServiceStandard.h
lardata/Utilities/: CMakeLists.txt  DetectorPropertiesServiceArgoNeuT.h  LArFFTW.h  LArPropertiesServiceArgoNeuT.h  SignalShaper.cxx  SignalShaper.h
lardata/Utilities/MarqFitAlg/: CMakeLists.txt  MarqFitAlg.cxx
